# SDP

./: README.md
DA implementation/: CMakeCache.txt  Makefile  cmake_install.cmake  vector.hpp
DA implementation/proxy/: Makefile  Proxy  cmake_install.cmake
DA implementation/vector/: Makefile  VectorTest  cmake_install.cmake
ExamPrep/: BST.h  binaryTree.h  list.h  splitAndMergeList.cpp  task01.cpp  task02.cpp  task02.txt
ExamPrep/Popravitelna 2020-2021/: list.h  task01.cpp
ExamPrep/Praktikum/: list.h  task02.cpp
Group F/HackerRank 17_11_21/: a.out  balancedBrackets.cpp  poisonousPlants.cpp
Group F/HackerRank 24_11_21/: cycleDetection.cpp  findMergePointOf2Lists.cpp  insertNodeAt.cpp  insertNodeSortedDoublyList.cpp  reverseDoublyLinkedList.cpp
HW01/: .gitignore  CMakeLists.txt  MyStore.h  a.out  implementation.cpp  interface.h  linkedQueue.h  main.cpp  moreTests.cpp  tests.cpp
HW01 Copy/: MyStore.h  a.out  implementation.cpp  interface.h  main.cpp  queue.h  tests.cpp
HW01/fn82213_HW01/: implementation  interface.h
HW02/: CMakeLists.txt  a.out  interface.h  main.cpp  test1.txt  tests.cpp
HW02/.cache/clangd/index/: catch.hpp.3C945D6E8CB14A95.idx  implementation.cpp.CDBDF2C8782AEA7A.idx  input.cpp.1D3401573C8C47A7.idx  input.h.C871AACB924DA157.idx  interface.h.31F085E529D5A69E.idx  main.cpp.817C358F8D1466D3.idx  output.cpp.CCDC1CD25332F931.idx  output.h.5749B605DED213AF.idx  team.cpp.512B0FBD19C944B4.idx  team.h.68B3FABA6443D120.idx  tests.cpp.5B406F36508CA4A2.idx  utils.cpp.61838E8AB5302BE0.idx  utils.h.8FB21F795702A71A.idx
HW02/include/: commands.h  input.h  interface.h  output.h  team.h
HW02/src/: commandTokenizer.cpp  commands.cpp  implementation.cpp  input.cpp  myTests.cpp  output.cpp  team.cpp
HW03/: .gitignore  CMakeLists.txt  Homework03.cpp  main  main.cpp
HW03/HW03_fn82213/src/: comparator.cpp
HW03/include/: hash.h  interface.h  multiSet.h  pair.h
HW03/sakura/include/: wordCount.h
HW03/sakura/src/: implementation.cpp
HW03/sakura/tests/: tests.cpp
HW03/src/: implementation.cpp  multiSet.cpp  tempCodeRunnerFile.cpp
List implementation/: a.out  catch_utils.hpp  list.hpp  list_tests.cpp  mem_inspect.hpp  type_traits.hpp
ListFunc/: CMakeLists.txt  main.cpp
ListFunc/include/: analyzer.h  commandReader.h  commandTokens.h  exceptions.h  expressionElements.h  expressionParts.h  interpreter.h  list.h  predefinedFuncs.h  types.h  utilities.h
ListFunc/source/: analyzer.cpp  commandReader.cpp  commandTokens.cpp  exceptions.cpp  expressionElements.cpp  expressionParts.cpp  interpreter.cpp  list.cpp  utilities.cpp
hw.zip/: implementation.cpp  interface.h  team.cpp
hw02_fn82213/: .gitignore  tests.cpp
sakura/: CMakeLists.txt  customTest.cpp  main.cpp
sakura (copy)/: .gitignore  CMakeLists.txt
(+22 files in other folders)
